# betterproto

./: .flake8  .gitignore  pyproject.toml  tasks.toml
cbiproto/: __init__.py  _casing.py  _types.py  const.py  fields.py  server.py  types.py  utils.py
cbiproto/aio/: __init__.py  client.py  server.py
cbiproto/lib/cbi/protobuf/service/: __init__.py
cbiproto/lib/google/protobuf/: __init__.py
cbiproto/lib/google/protobuf/compiler/: __init__.py
cbiproto/plugin/: compiler.py  formatter.py  importing.py  main.py  models.py  naming.py  options.py  parser.py  utils.py
cbiproto/protos/cbi/protobuf/: service.proto
cbiproto/runtime/: __init__.py  client.py  exception.py  middleware.py  server.py  types.py
cbiproto_tools/compile/: main.py
cbproto/aio/: server.py
cbproto/lib/cbi/protobuf/service/: __init__.py
cbproto/lib/google/protobuf/: __init__.py
cbproto/lib/google/protobuf/compiler/: __init__.py
cbproto/toolz/compile/: main.py
cbproto/toolz/fetch/: main.py
grpc-stubs/: __init__.pyi
grpc-stubs/_cython/: cygrpc.pyi
grpc-stubs/aio/: __init__.pyi  _base_call.pyi  _base_channel.pyi  _base_server.pyi  _call.pyi  _channel.pyi  _interceptor.pyi  _metadata.pyi  _server.pyi  _typing.pyi
src/betterproto/: __init__.py  fields.py  types.py
src/betterproto/lib/cbi/protobuf/service/: __init__.py
src/betterproto/lib/google/protobuf/: __init__.py
src/betterproto/lib/google/protobuf/compiler/: __init__.py
src/betterproto/lib/internal/protobuf/service/: __init__.py
src/betterproto/plugin/: compiler.py  utils.py
src/betterproto/protos/internal/protobuf/: service.proto
src/betterproto/toolz/compile/: main.py
src/cbiproto/: __init__.py  _types.py  _utils.py
src/cbiproto/lib/google/protobuf/: __init__.py
src/cbiproto/lib/google/protobuf/compiler/: __init__.py
src/cbiproto/plugin/: compiler.py  importing.py  main.py  models.py  naming.py  parser.py
src/cbiproto/runtime/: __init__.py  client.py  middleware.py  server.py
src/cbiproto/templates/: template.py.j2
src/cbiproto_tools/compile/: main.py
src/cbiproto_tools/fetch/: main.py  requirements.py
src/cbproto/: __init__.py  client.py  fields.py  types.py
src/cbproto/aio/: __init__.py
src/cbproto/plugin/: compiler.py  utils.py
testprotos/: test.proto
