[tool.poetry]
authors = ["bryan.matteson <bryan.matteson@gmail.com>"]
description = ""
name = "betterproto"
packages = [
  { include = "betterproto", from = "src" },
  { include = "grpc-stubs" },
]
version = "0.0.1"

[tool.poetry.dependencies]
black = { version = ">=23.1.0", optional = true }
grpc-stubs = { version = "^1.24.10", optional = true }
grpcio = "^1.47.0"
grpcio-tools = { extras = ["protobuf"], version = "^1.46.0", optional = true }
grpclib = "^0.4.2"
isort = { version = ">=5.12.0", optional = true }
pydantic = "^1.9.1"
python = "^3.8"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.12.2"
pytest = "^5.2"

[tool.poetry.scripts]
betterproto-compile = "betterproto.toolz.compile.main:main"
protoc-gen-python_cbproto = "betterproto.plugin:main"

[tool.poetry.extras]
compiler = ["black", "isort", "grpc-stubs", "grpcio-tools"]

[tool.poe]
include = ["tasks.toml"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.pycln]
all = true

[tool.black]
include = "\\.(py)$"
line-length = 120
target-version = ["py38"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_traceback = true

[tool.pyright]
exclude = ["**/__pycache__"]
ignore = ["grpc-stubs"]
include = ["src/betterproto"]
stubPath = "./typings"
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false

pythonPlatform = "All"
pythonVersion = "3.9"
